Bug 689983 - Regression: differences in 148-11.ps in page mode vs. banding
Summary: Regression: differences in 148-11.ps in page mode vs. banding
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Regression (show other bugs)
Version: master
Hardware: Macintosh MacOS X
: P1 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-28 13:31 UTC by Marcos H. Woehrmann
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
screenshot.png (140.37 KB, image/png)
2008-07-28 13:32 UTC, Marcos H. Woehrmann
Details
Interp_Bug_Patch.diff (407 bytes, patch)
2008-07-28 15:03 UTC, Michael Vrhel
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2008-07-28 13:31:11 UTC
Starting with r8668 Ghostscript output for 148-11.ps differs in page mode vs. banding (see 
screenshot.png, attached).

The command lines I'm using:

  bin/gs -sDEVICE=ppmraw -sOutputFile=test1.ppm -r300 -dMaxBitmap=30000000 ./148-11.ps
  bin/gs -sDEVICE=ppmraw -sOutputFile=test2.ppm -r300 -dMaxBitmap=10000 ./148-11.ps
Comment 1 Marcos H. Woehrmann 2008-07-28 13:32:07 UTC
Created attachment 4243 [details]
screenshot.png
Comment 2 Ray Johnston 2008-07-28 14:14:06 UTC
This looks pretty bad, and we need to investigate in and either fix it or revert
the relevant change. The log message for 8668 doesn't indicate expected
differences:

-------------------------------------------------------------------------------
r8668 | mvrhel | 2008-04-27 23:47:28 -0700 (Sun, 27 Apr 2008) | 1 line
Changed paths:
   M /trunk/gs/src/gsicc.c

Undo accidental commitment of ENABLE_CUSTOM_COLOR_CALLBACK (has callback) code.
-------------------------------------------------------------------------------


Comment 3 Michael Vrhel 2008-07-28 15:03:50 UTC
Created attachment 4244 [details]
Interp_Bug_Patch.diff

This patch fixes the issue.  Issue was caused by me thinking that we were
always indexing in the source data by one byte forward when we were dealing
with and indexed image.  If the geometric transformation matrix had a -xx value
we end up going backwards through the data.
Comment 4 Marcos H. Woehrmann 2008-07-28 16:18:50 UTC
Thanks for the prompt response; I'm testing the patch now.
Comment 5 Marcos H. Woehrmann 2008-07-28 16:32:29 UTC
Problem is fixed (patch also fixes big vs. little-endian issue I noticed as was about to add to the bug 
report).  I'm closing the bug.