Fix for Bug 689983.  This was introduced with the source space interpolation code.  Fixes indexing direction in source data when we have indexed data, interpolation and a negative xx value in the geometric transformation.

EXPECTED DIFFERENCES:

148-11.ps

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8895 a1074d23-0009-0410-80fe-cf8c14f379e6